# dashboard-ligth

./: .gitignore  CLAUDE.md  README.md  api.org  front.org  project.clj  project.org  pyproject.toml  setup.org  tech.org
dev/: user.clj
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: env-config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: api.js
frontend/src/components/: Dashboard.jsx  DeploymentCard.jsx  DeploymentDetails.jsx  Filters.jsx  Loading.jsx  NamespaceCard.jsx  NamespaceDashboard.jsx  ProjectDashboard.jsx  Sidebar.jsx  StatusBadge.jsx  WebSocketStatus.jsx
frontend/src/context/: WebSocketContext.jsx
frontend/src/hooks/: useInterval.js  useK8sApi.js  useWebSocket.js  useWebSocketMonitor.js
k8s-manifest/: dashboard-light-policy.json  deployment.yaml  rbac.yaml  setup.org
resources/: config.yaml
resources/public/: index.html  react-test.html  simple-app.html  test.html
resources/public/js/: app.jsx  debug.jsx
src/: standalone_websocket_server.py  test_minimal_client.py  test_simple_websocket.py  test_watch_api.py  test_websocket_app.py  test_websocket_client.py  test_websocket_load.py
src/dashboard_light/: __init__.py  core.clj  core.py  state_manager.py  websocket_server.py
src/dashboard_light/auth/: core.clj  gitlab.clj  rbac.clj
src/dashboard_light/config/: __init__.py  core.clj  core.py  schema.clj  schema.py
src/dashboard_light/k8s/: __init__.py  cache.clj  cache.py  controllers.py  core.clj  core.py  deployments.clj  deployments.py  (+9 more)
(+34 files in other folders)
